--- a/Taht.Api/appsettings.json
+++ b/Taht.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "hamza.taslidza01@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "hamza.taslidza01@gmail.com",
+    "Password": "ggniurflgjfofeup"
+  },
   "AllowedHosts": "*"
 }
