--- a/Taht.Common.Services/Taht.Common.Services.csproj
+++ b/Taht.Common.Services/Taht.Common.Services.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.2" />
+		<PackageReference Include="NETCore.MailKit" Version="2.1.0" />
 	</ItemGroup>
 
   <ItemGroup>
